--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,16 @@ h1{
         opacity: initial;
     }
 }
+.loading{
+    width:30px;
+    height: 30px;
+    border-radius: 50%;   
+    border: 5px solid #ccc;
+    border-right-color: transparent;
+    animation: loading 1s infinite;
+}
+@keyframes loading {
+    to{
+        transform: rotate(360deg);
+    }
+}
