--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@ a {
 h1{
     font-size: 1.4rem;
 }
+.App{
+    display:flex;
+    flex-direction: column;
+    max-width: 40rem;
+    margin: 0auto;
+    min-width: calc(100vh + 10rem);
+
+}
+.content{
+    flex:1
+}
 
 .animeLeft {
     transform: translateX(-20px);
