--- a/src/Components/Contato.module.css
+++ b/src/Components/Contato.module.css
@@ -1,22 +1,22 @@
-.contato {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+.contato{
+    background:rgb(0, 0, 0, .2);
+    width: 75%;
+    margin:10px auto;
+    height: 60vh;
+   display:grid;
+   grid-template-columns: 1fr 1fr;  
+   gap: 2rem
 }
-.dados {
-    padding: 0px;
+.contato img{
+    margin:2px auto;
+    width:70%;
+}
+.dados{
     list-style: none;
+    padding:0px
 }
-.dados li {
-    font-size: 1.2rem;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: .8rem;
-}
-.dados li::before{
-    content: '';
-    display: inline-block;
-    width:20px;
-    height: 2px;
-    background:#ddd;
-    margin-right: 10px;
+.adress{
+    font-size:1.5rem;
+    font-family:monospace;
+    margin:50px auto;
 }
